# MGT556-NFLPredictions

./: CreateMainSheet.ipynb  DSTSheetCreation.ipynb  DataCombination.ipynb  ExploratoryAnalysis.ipynb  PlayerStatSheetCreation.ipynb  PredictionSheetCreation.ipynb  README.md  pyproject.toml  random.ipynb
data/: SeasonData.xlsx
lib/: best_subset_utils.py  data_fetching_utils.py  data_processing_utils.py  file_utils.py  output_utils.py  plotting_utils.py  preset_selections.py
source/: SeasonData.xlsx
