[project]
name = "mgt556-nflpredictions"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastexcel>=0.19.0",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nflreadpy>=0.1.5",
    "pandas==3.0.1",
    "pandas-stubs~=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "xlsxwriter>=3.2.9",
]
